# opencode-ace

./: .gitignore  .prettierrc  ARCHITECTURE.md  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  tsconfig.json
config/: ace-config.json
skillbooks/agents/: openagent.json
skillbooks/global/: global.json
skillbooks/languages/: go.json
src/: index.ts  learning.ts  master-memory.ts  project-detection.ts  skillbook-migrator.ts
src/command/: ace-clear.md  ace-enable-context.md  ace-inspect.md  ace-load.md  ace-save.md  ace-status.md  ace-toggle.md
src/python/: learn_ace.py
src/python/ace_opencode/: __init__.py  integration.py  learn.py  llm_adapter.py  reflector_ext.py  skill_ext.py  skill_manager_ext.py  skillbook_ext.py  skillbook_manager.py
